# wlist

./: .gitignore  MANIFEST.in  README.md  backup.py  export_avilist_change_table.py  export_wlist_extended.py  find_unmatched_taxon_ids.py  ingest_edited_wlist.py  package_wlist.py  pyproject.toml  validate_wlist_update.py  wlist_dqa.py  wlist_dqa_report.md  wlist_package.md
_archive/: wlist_al_2025.sql.bak
add_taxon/: add_taxon.py  sample_add_taxon.json
data_package/: DATA_PACKAGE.md  README_figshare.md  wlist_core_data_dictionary.csv  wlist_lut_rli_data_dictionary.csv
data_package/figshare/: FIGSHARE_SUBMIT_README.md  figshare_create_draft.py  figshare_submit.py
documentation/: README.md
package/: FIGSHARE_SUBMIT_README.md  figshare_create_draft.py  figshare_submit.py
reconciliation/: integrated_changes.csv  report_change_class.py  wlist_change_class_report.md
resources/sql/: README.md
sql/: AviList_wlist_integration.sql  WLAB_add taxon and shuffle sort.sql  avilist_import.sql  version reconciliation.sql  w_add_row.sql  wlist_package.sql
strategy/: 00_strategy.md  01_wlist_deepdive.md  02_wlist_dev_log.md  03_wlist_architecture_target.md
strategy/_handoffs/: 20260713_wlist_rearch_trackB_HANDOFF.md
taxonomy/avilist_wlist_2025/: avilist_import_documentation.md  check_csv_structure.py  check_wlist_structure.py  import_avilist.py  wlist_avilist changes 2025.html  wlist_avilist changes 2025.ipynb  wlist_avilist changes 2025.md
wlist/add_taxon/: README.md  add_taxon.py  sample_add_taxon.csv
wlist/core/: db.py
wlist/ingest/: ingest_edited_wlist.py  (+1 more)
(+13 files in other folders)
