[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wlist-local"
version = "0.1.0"
description = "Local packaging config for the wlist utilities inside the wlist workspace"
requires-python = ">=3.9"
dependencies = [
  "psycopg2-binary>=2.9",
  "pandas>=2.2",
  "reportlab>=4.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
packages = { find = { where = ["."], include = ["wlist*"] } }
include-package-data = true

[tool.setuptools.package-data]
# Ship only runtime SQL; ops is excluded
"wlist" = [
  "resources/sql/runtime/*.sql",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
